fixed layout issues

--- a/dataforager.css
+++ b/dataforager.css
@@ -18,6 +18,9 @@ body{
           box-shadow: 5px 5px 5px #333;
 
   z-index:10000;
+  -moz-border-radius: 15px;
+  -webkit-border-radius: 15px;
+  border-radius: 15px;
 }
 
 #dataforager_main h1{
